--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<nav class="main-menu">
 									<ul class="main-menu-list">
 				        		<li>
-					            <a href="#">Каталог</a>
+					            <a class="link" href="#">Каталог</a>
 									<ul class="sub-menu catalog-sub">
 									        <li><a class="new" href="#"><b>Новинки</b></a></li>
 									        <li><a href="catalog.html">Сливочное</a></li>
@@ -31,8 +31,8 @@
 									        <li><a href="#">Мелорин</a></li>
 								    		</ul>
 				        		</li>
-						        <li><a href="#">Доставка и оплата</a></li>
-						        <li><a href="#">О Компании</a></li>
+						        <li><a class="link" href="#">Доставка и оплата</a></li>
+						        <li><a class="link" href="#">О Компании</a></li>
 				    			</ul>
 							</nav>
 							<nav class="user-menu">
