--- a/catalog.html
+++ b/catalog.html
@@ -539,7 +539,7 @@
       <!--3.3. Логотип разработчика сайта и Copyright-->
       <div class="footer-copyright">
         <h2 class="visually-hidden">Copyright</h2>
-          <a href="https://htmlacademy.ru/intensive">
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
             <img src="img/svg-gllacy/logo-htmlacademy.svg" width="108" height="38" alt="Логотип HTML Academy">
           </a>
           <p>Сделано в HTML Academy © 2017</p>
