--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 					<div class="main-footer-wrapper">
 						<!--3.1. Ссылки на социальные сети-->
 						<div class="footer-social">
-							<h2 class="visually-hidden">Ссылки на социальные сети</h2> <!--***Скрытый заголовок***-->
+						<h2 class="visually-hidden">Ссылки на социальные сети</h2> <!--***Скрытый заголовок***-->
 							<ul>
 								<li>
 									<a class="social-button" href="https://twitter.com/">
@@ -294,6 +294,7 @@
 							  </li>
 							  <li>
 							    <a class="social-button" href="https://vk.com/">
+							    	<span class="visually-hidden">Вконтакте</span>
 							      <img src="img/svg-gllacy/vk.svg" width="32" height="32" alt="Вконтакте">
 							    </a>
 							  </li>
@@ -301,8 +302,8 @@
 						</div>
 
 						<!--3.2. Дополнительное меню с информацией о компании-->
-						<h2 class="visually-hidden">Дополнительное меню с информацией о компании</h2> <!--***Скрытый заголовок***-->
 						<div class="footer-menu">
+						<h2 class="visually-hidden">Дополнительное меню с информацией о компании</h2> <!--***Скрытый заголовок***-->
 							<div class="footer-menu-flex">
 								<a class="menu-providers" href="#"><span class="heart">Для поставщиков</span></a>
 								<a class="menu-doc" href="#"><span>Наши документы</span></a>
@@ -314,7 +315,7 @@
 						<!--3.3. Логотип разработчика сайта и Copyright-->
 						<div class="footer-copyright">
 							<h2 class="visually-hidden">Copyright</h2> <!--***Скрытый заголовок***-->
-								<a href="https://htmlacademy.ru/intensive">
+								<a href="https://htmlacademy.ru/intensive/htmlcss">
 									<img src="img/svg-gllacy/logo-htmlacademy.svg" width="108" height="38" alt="Логотип HTML Academy">
 								</a>
 								<p>Сделано в HTML Academy © 2017</p>
@@ -345,7 +346,7 @@
 				    </div>
 				</section>
 			</div>
-		  <script src="js/scripts.js"></script>
+		  <script src="js/scripts.min.js"></script>
 		</body>
 		</html>
 
