--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <title>GllacyShop</title>
 </head>
 <body>
-  <div class="site-wrapper-catalog"> 
+
     <div class="container">
 
       <!--1. ***ШАПКА САЙТА***-->
@@ -162,8 +162,9 @@
                       <label for="sorting-filter" class="visually-hidden">Сортировка:</label>
                       <select id="sorting-filter" name="sorting">
                         <option selected value="popular">По популярности</option>
-                        <option value="name">По наименованию</option>
-                        <option value="price">По цене</option>
+                        <option value="name">сначала недорогие</option>
+                        <option value="price">сначала дорогие</option>
+                        <option value="price">по жироности</option>
                       </select>
                     </div>
 
@@ -274,6 +275,7 @@
       </form>  
     </section>
 
+<!--     <div class="site-wrapper-catalog">  -->
     <!--2.3.Каталог товаров-->
     <section class="list-wrapper">
     <h2 class="visually-hidden">Список продукции</h2> <!--***Скрытый заголовок***--> 
@@ -347,7 +349,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item5_lingoberry.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-              <p class="price"><span>310&#8381;</span>/кг</p>
+              <p class="price"><span>325&#8381;</span>/кг</p>
           </div>
               <a class="item-name" href="#">Сливочное с брусничным джемом</a>
         </div>
@@ -363,7 +365,7 @@
          <div class="preview">
             <div class="item-photo">
               <img src="img/item6_blueberry.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-                <p class="price"><span>380&#8381;</span>/кг</p>
+                <p class="price"><span>410&#8381;</span>/кг</p>
             </div>
               <a class="item-name" href="#">Сливочно-черничное с цельными ягодами черники</a>
           </div>
@@ -379,7 +381,7 @@
        <div class="preview">
           <div class="item-photo">
             <img src="img/item7_limon.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-              <p class="price"><span>355&#8381;</span>/кг</p>
+              <p class="price"><span>375&#8381;</span>/кг</p>
           </div>
               <a class="item-name" href="#">Сливочно-лимонное с карамельной присыпкой</a>
         </div>
@@ -395,7 +397,7 @@
       <div class="preview">
         <div class="item-photo">
           <img src="img/item8_chocolate_chips.jpg" width="267" height="267" alt="ССливочное с шоколадной стружкой">
-           <p class="price"><span>415&#8381;</span>/кг</p>
+           <p class="price"><span>320&#8381;</span>/кг</p>
         </div>
           <a class="item-name" href="#">Сливочное с шоколадной стружкой</a>
       </div>
@@ -411,7 +413,7 @@
           <div class="preview">
             <div class="item-photo">
               <img src="img/item9_vanilla_chocolate.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-                <p class="price"><span>310&#8381;</span>/кг</p>
+                <p class="price"><span>440&#8381;</span>/кг</p>
             </div>
               <a class="item-name" href="#">Сливочно-ванильное с кусочками шоколада</a>
           </div>
@@ -427,7 +429,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item10_menthol_syrup.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-              <p class="price"><span>380&#8381;</span>/кг</p>
+              <p class="price"><span>435&#8381;</span>/кг</p>
            </div>
             <a class="item-name" href="#">Сливочное с ментоловым сиропом</a>
             </div>
@@ -459,7 +461,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item12_mint_syrup.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-              <p class="price"><span>415&#8381;</span>/кг</p>
+              <p class="price"><span>420&#8381;</span>/кг</p>
           </div>
             <a class="item-name" href="#">Сливочное с мятным сиропом</a>
         </div>
@@ -547,7 +549,7 @@
 
     </div>
   </footer>
-  </div>
-  </div> 
+<!--   </div> -->
+<!--   </div>  -->
 </body>
 </html>
