--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 				<!--2.4. Преимушества компании-->
 				<section class="seo">
 					<h2 class="visually-hidden">Преимушества компании</h2> <!--***Скрытый заголовок***-->
-					<p class="seo-caption">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
+					<p class="seo-caption">Магазин Глэйси — это онлайн-&nbsp;&nbsp;и офлайн-&nbsp;&nbsp;магазин по продаже мороженого собственного производства на развес</p>
 					<div class="seo-container-flex">
 						<div class="seo-container-left">
 							<h3 class="visually-hidden">1.Технологии</h3> <!--***Скрытый заголовок***-->
