--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link href="css/normalize.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
   <title>GllacyShop</title>
 </head>
@@ -142,8 +142,8 @@
             <!--2.1. Меню "Хлебные крошки"-->
             <h2 class="visually-hidden">Меню "Хлебные крошки"</h2> 
             <ul class="breadcrumbs">
-              <li><a href="index.html">Главная<span>&nbsp;&raquo;</span></a></li>
-              <li><a href="catalog.html">Каталог<span>&nbsp;&raquo;</span></a></li>
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
               <li class="breadcrumbs-current"><a href="#">Сливочное</a></li> 
             </ul>
 
