--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
                           <div class="basket-list-flex">
                             <div class="basket-item"> <!--1st item-->
                               <div class="basket-item-delete"><a class="delete" href="#">Удалить</a></div>
-                              <div class="basket-item-photo"><img src="img/orange-jam-mini.jpg" alt="Пломбир с апельсиновым джемом"></div>
+                              <div class="basket-item-photo"><img src="img/orange-jam-mini.jpg" alt="Пломбир с апельсиновым джемом" width="35" height="35"></div>
                               <div class="basket-item-name"><p>Пломбир с апельсиновым джемом</p></div>
                               <div class="item-weight">1,5 кг</div>
                               <div><span>x</span></div>
@@ -101,7 +101,7 @@
 
                             <div class="basket-item"> <!--2nd item-->
                               <div class="basket-item-delete"><a class="delete" href="#">Удалить</a></div>
-                              <div class="basket-item-photo"><img src="img/strawberry-white-chocolate-mini.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада"></div>
+                              <div class="basket-item-photo"><img src="img/strawberry-white-chocolate-mini.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада" width="35" height="35"></div>
                               <div class="basket-item-name"><p>Клубничный пломбир с присыпкой из белого шоколада</p></div>
                               <div class="item-weight">1,5 кг</div>
                               <div><span>x</span></div>
