--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link href="css/normalize.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 	<title>GllacyShop</title>
 </head>
@@ -28,7 +28,7 @@
 						<nav class="main-menu">
 							<ul class="main-menu-list">
 				        <li>
-					        <a href="#">Каталог</a>
+					        <a href="#"><span>Каталог</span></a>
 										<ul class="sub-menu catalog-sub">
 									      <li><a class="new" href="#"><b>Новинки</b></a></li>
 									      <li><a href="catalog.html">Сливочное</a></li>
@@ -37,8 +37,8 @@
 									      <li><a href="#">Мелорин</a></li>
 								    </ul>
 				        </li>
-						    <li><a href="#">Доставка и оплата</a></li>
-						    <li><a href="#">О Компании</a></li>
+						    <li><a href="#"><span>Доставка и оплата</span></a></li>
+						    <li><a href="#"><span>О Компании</span></a></li>
 				    	</ul>
 						</nav>
 
@@ -70,8 +70,8 @@
 													<div class="entrance"> 
 														<input type="submit" class="button" value="Войти"> 
 														<div class="help-wrapper"> 
-															<a href="#"><span>Забыли пароль?</span></a> 
-															<a href="#"><span>Новая регистрация</span></a> 
+															<a class="help-link" href="#">Забыли пароль?</a> 
+															<a class="help-link" href="#">Новая регистрация</a> 
 														</div> 
 													</div> 
 												</form> 
@@ -137,7 +137,7 @@
 				</section>
 
 				<!--2.3.***ХИТЫ ПРОДАЖ***-->
-				<section class="list-wrapper">
+				<section class="list-wrapper list-wrapper-hit">
 				<h2 class="visually-hidden">Хиты продаж</h2> <!--***Скрытый заголовок***-->
 
 					<!--1ый хит-->
@@ -205,7 +205,6 @@
 				<section class="seo">
 					<h2 class="visually-hidden">Преимушества компании</h2> <!--***Скрытый заголовок***-->
 					<p class="seo-caption">Магазин Глэйси — это онлайн-&nbsp;&nbsp;и офлайн-&nbsp;&nbsp;магазин по продаже мороженого собственного производства на развес</p>
-					<div class="seo-container-flex">
 						<div class="seo-container-left">
 							<h3 class="visually-hidden">1.Технологии</h3> <!--***Скрытый заголовок***-->
 							<p class="technology">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
@@ -218,7 +217,6 @@
 							<h3 class="visually-hidden">4.Доставка</h3> <!--***Скрытый заголовок***-->
 							<p class="delivery">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 						</div>
-					</div>
 				</section>
 
 				<!--2.5 Дополнительная информация-->
@@ -244,12 +242,17 @@
 		</div>  <!--закрытие контейнера-->
 
 				<!--2.6. Карта, адрес и контакты-->
-				<section class="map-container">
+				<div class="map">
           <h2 class="visually-hidden">контактная информация</h2> <!--***Скрытый заголовок***-->
-          <img src="img/map.jpg" width="1200" height="430" alt="Адрес: ул.Большая Конюшенная 19/8, Санкт-Петербург"> 
+          <div class="map-photo">
+          	<img src="img/map.jpg" width="1200" height="430" alt="Адрес: ул.Большая Конюшенная 19/8, Санкт-Петербург"> 
+          </div>
+          
+          <div class="map-link">
+          	<a href="https://yandex.ru/map-widget/v1/-/CBazqBwqcD"></a>
+          </div>
           <div class="location-icon"><img src="img/svg-gllacy/pin.svg" width="80" height="140" alt="Адрес: ул.Большая Конюшенная 19/8, Санкт-Петербург"></div> 
-          <!-- <iframe class="contacts-map" src="https://yandex.ru/map-widget/v1/-/CBazqBwqcD" height="429"></iframe> -->
-          <div class="container">
+  
 						<div class="map-contacts">
 							<div class="map-contacts-info">
 								<h3 class="visually-hidden">Контакты</h3> <!--***Скрытый заголовок***-->
@@ -264,8 +267,8 @@
 								<a class="button feedback-button" href="feedback.html">Форма обратной связи</a>
 							</div>
 						</div>
-          </div>
-				</section>
+
+				</div>
 
 				<!--3. ***ПОДВАЛ***-->
 				<footer class="main-footer container">
