--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 												</div>
 										</div>
 									</li>
+									<!--1.2.2. Всплылывающее окно входа-->
 									<li class="btn login">
 										<div class="login-wrapper" tabindex="0">
 											<a href="#">Вход</a>
@@ -146,7 +147,7 @@
 						<div class="preview">
 							<div class="item-photo hit-item-photo">
 								<img src="img/item1_orange_hit1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-								<p class="price"><span>310&#8381;</span>/кг</p>
+								<p class="price"><span>310</span>/кг</p>
 							</div>
 							<a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 						</div>
@@ -161,7 +162,7 @@
 						<div class="preview">
 							<div class="item-photo hit-item-photo">
 								<img src="img/item2_coffe_chocolate_hit2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-								<p class="price"><span>380&#8381;</span>/кг</p>
+								<p class="price"><span>380</span>/кг</p>
 							</div>
 							<a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
 						</div>
@@ -176,7 +177,7 @@
 						<div class="preview">
 							<div class="item-photo hit-item-photo">
 								<img src="img/item3_strawberry_white_chocolate_hit3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-								<p class="price"><span>355&#8381;</span>/кг</p>
+								<p class="price"><span>355</span>/кг</p>
 							</div>
 							<a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 						</div>
@@ -191,7 +192,7 @@
 						<div class="preview">
 							<div class="item-photo hit-item-photo">
 								<img src="img/item4_creme_brulee_hit4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-								<p class="price"><span>415&#8381;</span>/кг</p>
+								<p class="price"><span>415</span>/кг</p>
 							</div>
 							<a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
 						</div>
@@ -253,9 +254,9 @@
           </div>
           <div class="location-icon"><img src="img/svg-gllacy/pin.svg" width="80" height="140" alt="Адрес: ул.Большая Конюшенная 19/8, Санкт-Петербург"></div> 
   
-						<div class="map-contacts">
+<!-- 						<div class="map-contacts">
 							<div class="map-contacts-info">
-								<h3 class="visually-hidden">Контакты</h3> <!--***Скрытый заголовок***-->
+								<h3 class="visually-hidden">Контакты</h3> 
 								<p class="adress">Адрес главного офиса<br/>и офлайн-магазина:<br>
 									<b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
 								</p>
@@ -266,6 +267,28 @@
 								</p>
 								<a class="button feedback-button" href="feedback.html">Форма обратной связи</a>
 							</div>
+						</div> -->
+
+						<div class="map-contacts">
+	 						<div class="map-contacts-flex">
+							<h3 class="visually-hidden">Контакты</h3>  <!--***Скрытый заголовок***-->	
+								<div class="map-contacts-adress">
+									<p>Адрес главного офиса<br>и офлайн-магазина:<br>
+									<span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span></p>
+									</p>
+								</div>	
+
+								<div class="map-contacts-telefon">
+									<p>
+										<span>Для заказов по телефону:</span><br/>
+										<b class="tel">8 812 450-25-25</b><br>
+										<span>(с 10 до 20 ежедневно)</span>
+									</p>
+								</div>
+								<div class="map-contacts-button">	
+									<a class="button feedback-button" href="feedback.html">Форма обратной связи</a>
+								</div> 
+							</div>	
 						</div>
 
 				</div>
