--- a/catalog.html
+++ b/catalog.html
@@ -284,7 +284,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item1_orange_hit1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-            <p class="price"><span>310&#8381;</span>/кг</p>
+            <p class="price"><span>310</span>/кг</p>
           </div>
             <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой </a>
         </div>
@@ -300,7 +300,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item2_coffe_chocolate_hit2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-            <p class="price"><span>380&#8381;</span>/кг</p>
+            <p class="price"><span>380</span>/кг</p>
           </div>
           <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
         </div>
@@ -316,7 +316,7 @@
           <div class="preview">
             <div class="item-photo">
               <img src="img/item3_strawberry_white_chocolate_hit3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-              <p class="price"><span>355&#8381;</span>/кг</p>
+              <p class="price"><span>355</span>/кг</p>
             </div>
               <a class="item-name" href="#"> Сливочно-клубничное с присыпкой из белого шоколада</a>
           </div>
@@ -332,7 +332,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item4_creme_brulee_hit4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-             <p class="price"><span>415&#8381;</span>/кг</p>
+             <p class="price"><span>415</span>/кг</p>
           </div>
             <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливко</a>
         </div>
@@ -348,7 +348,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item5_lingoberry.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-              <p class="price"><span>325&#8381;</span>/кг</p>
+              <p class="price"><span>325</span>/кг</p>
           </div>
               <a class="item-name" href="#">Сливочное с брусничным джемом</a>
         </div>
@@ -364,7 +364,7 @@
          <div class="preview">
             <div class="item-photo">
               <img src="img/item6_blueberry.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-                <p class="price"><span>410&#8381;</span>/кг</p>
+                <p class="price"><span>410</span>/кг</p>
             </div>
               <a class="item-name" href="#">Сливочно-черничное с цельными ягодами черники</a>
           </div>
@@ -380,7 +380,7 @@
        <div class="preview">
           <div class="item-photo">
             <img src="img/item7_limon.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-              <p class="price"><span>375&#8381;</span>/кг</p>
+              <p class="price"><span>375</span>/кг</p>
           </div>
               <a class="item-name" href="#">Сливочно-лимонное с карамельной присыпкой</a>
         </div>
@@ -396,7 +396,7 @@
       <div class="preview">
         <div class="item-photo">
           <img src="img/item8_chocolate_chips.jpg" width="267" height="267" alt="ССливочное с шоколадной стружкой">
-           <p class="price"><span>320&#8381;</span>/кг</p>
+           <p class="price"><span>320</span>/кг</p>
         </div>
           <a class="item-name" href="#">Сливочное с шоколадной стружкой</a>
       </div>
@@ -412,7 +412,7 @@
           <div class="preview">
             <div class="item-photo">
               <img src="img/item9_vanilla_chocolate.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-                <p class="price"><span>440&#8381;</span>/кг</p>
+                <p class="price"><span>440</span>/кг</p>
             </div>
               <a class="item-name" href="#">Сливочно-ванильное с кусочками шоколада</a>
           </div>
@@ -428,7 +428,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item10_menthol_syrup.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-              <p class="price"><span>435&#8381;</span>/кг</p>
+              <p class="price"><span>435</span>/кг</p>
            </div>
             <a class="item-name" href="#">Сливочное с ментоловым сиропом</a>
             </div>
@@ -444,7 +444,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item11_creamy_bitter_chocolate.jpg" width="267" height="267" alt="ССливочное с кусочками чёрного шоколада">
-              <p class="price"><span>355&#8381;</span>/кг</p>
+              <p class="price"><span>355</span>/кг</p>
           </div>
               <a class="item-name" href="#">Сливочное с кусочками чёрного шоколада </a>
         </div>
@@ -460,7 +460,7 @@
         <div class="preview">
           <div class="item-photo">
             <img src="img/item12_mint_syrup.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-              <p class="price"><span>420&#8381;</span>/кг</p>
+              <p class="price"><span>420</span>/кг</p>
           </div>
             <a class="item-name" href="#">Сливочное с мятным сиропом</a>
         </div>
