--- a/catalog.html
+++ b/catalog.html
@@ -47,11 +47,11 @@
 
                   <!--1.2.1. Всплылывающее окно поиска-->
                   <div class="search-wrapper">
-                    <a class="search-link" href="#">Поиск</a>
+                    <!-- <a class="visual-hidden search-link" href="#">Поиск</a> -->
                       <div class="window window-search">
                         <form name="search" action="https://echo.htmlacademy.ru" method="get">
-                          <label for="search" class="visually-hidden">Поиск</label>
-                          <input class="input-search" id="search" type="text" name="search" placeholder="Что ищем?">
+                          <label for="searching" class="visually-hidden">Поиск</label>
+                          <input class="input-search" id="searching" type="text" name="search" placeholder="Что ищем?">
                         </form>
                       </div>
                   </div>
@@ -149,129 +149,57 @@
             <h2 class="page-title">Сливочное мороженое</h2>
             <!--2.2.Сортировка товаров-->
             <section class="filters">
-            <h3 class="visually-hidden">Сортировка товаров</h3>  <!--***Скрытый заголовок***--> 
-              <form class="filters-form" method="get" action="https://echo.htmlacademy.ru"> 
-                <div class="filters-flex">
-                  <div class="filters-top">
-                    <!--2.2.1.Тип сортировки-->
-                    <div class="sorting by-popularity">
-                      <h2 class="visually-hidden">Выбор типа сортировки</h2> <!--***Скрытый заголовок***--> 
-                      <h2 class="filter-label label-popularity">Сортировка:</h2>
-                      <label for="sorting-filter" class="visually-hidden">Сортировка:</label>
-                      <select id="sorting-filter" name="sorting">
-                        <option selected value="popular">По популярности</option>
-                        <option value="name">сначала недорогие</option>
-                        <option value="price">сначала дорогие</option>
-                        <option value="price">по жироности</option>
+            <h2 class="visually-hidden">фильтр товаров</h2>
+              <form class="filters-form" method="get" action="https://echo.htmlacademy.ru/">
+                <fieldset class="filter-sorting">
+                  <legend>Сортировка:</legend>
+                    <div class="select">
+                      <select name="sort" id="filters-sort">
+                      <option>по популярности</option>
+                      <option>сначала недорогие</option>
+                      <option>сначала дорогие</option>
+                      <option>по жирности</option>
                       </select>
                     </div>
-
-              <!--2.2.2.Выбор ценового диапазона-->
-              <div class="sorting by-price">
-                <h2 class="visually-hidden">Выбор ценового диапазона</h2>  <!--***Скрытый заголовок***--> 
-
-                <div class="price-range-wrapper">
-                  <h2 class="filter-label label-price">Цена: 100 руб. - 500 руб</h2>
-                    <label for="price-min" class="visually-hidden">from</label>
-                    <input class="price-min" id="price-min" type="text" name="min-price" value="100">
-                    <label for="price-max" class="visually-hidden">to</label>
-                    <input class="price-max" id="price-max" type="text" name="max-price" value="500">
-                </div>
-                          
-                <div class="range-controls">
-                  <div class="scale">
+                </fieldset>
+                <fieldset class="filter-range">
+                  <legend>Цена:
+                    <label for="price-min" class="visually-hidden">от</label>
+                    <input class="price-min" id="price-min" type="text" name="min-price" value="100"> руб. –
+                    <label for="price-max" class="visually-hidden">до</label>
+                    <input class="price-max" id="price-max" type="text" name="max-price" value="500"> руб.
+                  </legend>
+                    <div class="range-controls">
+                    <div class="scale">
                     <div class="bar"></div>
+                    </div>
+                    <div class="toggle min-toggle"></div>
+                    <div class="toggle max-toggle"></div>
                   </div>
+                </fieldset>
+                <fieldset class="filter-fat">
+                <legend>Жирность:</legend>
+                <p>
+                  <input type="radio" name="fats" id="zero-fat" value="zero-fat"><label for="fats-zero">0%</label>
+                  <input type="radio" name="fats" id="less-fat" value="less-fat" checked><label for="fats-small">до 10%</label>
+                  <input type="radio" name="fats" id="normal-fat" value="normal-fats"><label for="fats-mid">до 30%</label>
+                  <input type="radio" name="fats" id="so-fat" value="so-fats"><label for="fats-big">выше 30%</label>
+                </p>
+                </fieldset>
+                <fieldset class="filter-fill">
+                  <legend>Наполнители:</legend>
+                    <p>
+                      <input type="checkbox" name="chocolate" id="fill-choco" checked><label for="fill-choco">шоколадные</label>
+                      <input type="checkbox" name="sugar" id="fill-sugar" checked><label for="fill-sugar">сахарные присыпки</label>
+                      <input type="checkbox" name="fruit" id="fill-fruit"><label for="fill-fruit">фрукты</label>
+                      <input type="checkbox" name="syrup" id="fill-syrup"><label for="fill-syrup">сиропы</label>
+                      <input type="checkbox" name="jam" id="fill-jam"><label for="fill-jam">джемы</label>
+                    </p>
+                </fieldset>
+              <input type="submit" class="filter-button" value="Применить">
+              </form>
+            </section>
 
-                  <div class="toggle min-toggle"></div>
-
-                  <div class="toggle max-toggle"></div>
-
-                </div>
-
-              </div>
-
-              <!--2.2.2.Выбор жирности мороженого-->
-              <div class="sorting by-fat"> 
-              <h2 class="visually-hidden">Выбор жирности мороженого</h2> <!--***Скрытый заголовок***--> 
-              <h2 class="filter-label label-fat">Жирность:</h2>
-                <div class="fat-inputs-box">
-
-                  <label class="fat-filter-radio">
-                  <input class="visually-hidden" type="radio" name="fat-percent" value="0%">
-                    <span class="radio-indicator"></span>
-                      0%
-                  </label>   
-
-                  <label class="fat-filter-radio">
-                    <input class="visually-hidden" type="radio" name="fat-percent" value="less-10%" checked="checked">
-                      <span class="radio-indicator"></span>
-                        до 10%
-                  </label>  
-
-                  <label class="fat-filter-radio">
-                    <input class="visually-hidden" type="radio" name="fat-percent" value="less-30%">
-                      <span class="radio-indicator"></span>
-                        до 30%
-                  </label>  
-
-                  <label class="fat-filter-radio">
-                    <input class="visually-hidden" type="radio" name="fat-percent" value="more-30%%">
-                      <span class="radio-indicator"></span>
-                        выше 30%
-                  </label>  
-                </div>    
-              </div>
-
-          </div>  
-
-          <div class="filters-bottom">
-            <!--2.2.3.Выбор наполнителя-->
-            <div class="sorting by-fillers">
-            <h2 class="visually-hidden">Выбор наполнителя к мороженому</h2> <!--***Скрытый заголовок***--> 
-            <h3 class="filter-label label-filler">Наполнители:</h3>
-              <div class="fillers-inputs-box">
-                <label class="filler-filter-checkbox">
-                <input class="visually-hidden" type="checkbox" name="filler-chocolate" value="chocolate" checked="checked">
-                  <span class="checkbox-indicator"></span>
-                    шоколадные
-                </label>  
-
-                <label class="filler-filter-checkbox">
-                <input class="visually-hidden" type="checkbox" name="filler-sugar" value="sugar" checked="checked">
-                  <span class="checkbox-indicator"></span>
-                    сахарные присыпки
-                </label>  
-
-               <label class="filler-filter-checkbox">
-                <input class="visually-hidden" type="checkbox" name="filler-fruits" value="fruits">
-                  <span class="checkbox-indicator"></span>
-                    фрукты
-                </label>  
-
-                <label class="filler-filter-checkbox">
-                  <input class="visually-hidden" type="checkbox" name="filler-syrup" value="syrup" >
-                    <span class="checkbox-indicator"></span>
-                      сиропы
-                </label>  
-                          
-                <label class="filler-filter-checkbox">
-                  <input class="visually-hidden" type="checkbox" name="filler-jam" value="jam">
-                    <span class="checkbox-indicator"></span>
-                      джемы
-                </label> 
-              </div>    
-            </div>
-
-            <div class="sorting sorting-submit">
-              <button type="submit">Применить</button>
-            </div>
-
-          </div>  
-        </div>  
-
-      </form>   
-    </section>
 
 
 <!--     <div class="site-wrapper-catalog">  -->
