--- a/catalog.html
+++ b/catalog.html
@@ -47,7 +47,7 @@
 
                   <!--1.2.1. Всплылывающее окно поиска-->
                   <div class="search-wrapper">
-                    <!-- <a class="visual-hidden search-link" href="#">Поиск</a> -->
+                    <a class="visual-hidden" href="#">Поиск</a> <!--***Скрытая ссылка***-->
                       <div class="window window-search">
                         <form name="search" action="https://echo.htmlacademy.ru" method="get">
                           <label for="searching" class="visually-hidden">Поиск</label>
@@ -180,10 +180,10 @@
                 <fieldset class="filter-fat">
                 <legend>Жирность:</legend>
                 <p>
-                  <input type="radio" name="fats" id="zero-fat" value="zero-fat"><label for="fats-zero">0%</label>
-                  <input type="radio" name="fats" id="less-fat" value="less-fat" checked><label for="fats-small">до 10%</label>
-                  <input type="radio" name="fats" id="normal-fat" value="normal-fats"><label for="fats-mid">до 30%</label>
-                  <input type="radio" name="fats" id="so-fat" value="so-fats"><label for="fats-big">выше 30%</label>
+                  <input type="radio" name="fats" id="zero-fat" value="zero-fat"><label for="zero-fat">0%</label>
+                  <input type="radio" name="fats" id="less-fat" value="less-fat" checked><label for="less-fat">до 10%</label>
+                  <input type="radio" name="fats" id="normal-fat" value="normal-fats"><label for="normal-fat">до 30%</label>
+                  <input type="radio" name="fats" id="so-fat" value="so-fats"><label for="so-fat">выше 30%</label>
                 </p>
                 </fieldset>
                 <fieldset class="filter-fill">
