--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
           <nav class="main-menu">
             <ul class="main-menu-list">
               <li>
-                <a class="menu-current" href="#"><span>Каталог</span></a>
+                <a class="menu-current" href="#">Каталог</a>
                   <ul class="sub-menu">
                     <li><a class="new" href="#"><b>Новинки</b></a></li>
                     <li><a class="menu-current-page" href="catalog.html">Сливочное</a></li>
